# mako

./: .gitignore  .stress_profile_methane.py  STO-3G.orca  b3lyp.py  b3lyp_xc.py  baseline.py  def2-TZVP.orca  eri.py  hf.py  pyproject.toml
