[project]
name = "mako"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cupy>=14.0.1",
    "cutensor-cu13>=2.6.0",
    "gpu4pyscf-cuda13x>=1.6.1",
    "numpy>=2.4.3",
    "packaging>=26.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "triton>=3.6.0",
]
